# accreditation

./: .env  Cargo.toml  default.nix  docker-compose.yaml
migrations/2024-03-15-061929_create_member/: down.sql  up.sql
migrations/2024-03-15-072040_attendant/: down.sql  up.sql
src/: main.rs  models.rs  schema.rs
